refactor: centralize validation logic with ValidationUtils in data loading package